--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -10,22 +10,24 @@
 </head>
 <body>
     <div class="sidebar">
-        <a href="">Logo</a>
+        <div class="brand">
+            <a class="nav-logo" href="#!"><img src="../static/img/NOU-Pro.png" alt=""></a>
+          </div>
         <a href="./dashboard.html"> Result</a>
         <a href="./school.html">School</a>
-        <a href="#clients">Profile</a>
         <a href="/logout"><i class="fa-regular fa-arrow-up-left-from-circle"></i> Logout</a>
     </div>
 
 
 
     <div class="main">
-        <h1>Result Checker </h1>
+        <!-- <input type="button" value="Check Result"> -->
+        <!-- <h1>Result Checker </h1>
     <div class="part1">
         <h1>Put in your exam number <span class="star">**</span>  </h1>
-        <input type="number" name="" id="">
-<br>
-        <button>submit</button>
+        <input type="number" name="" id=""> -->
+
+        
     </div>
       </div>
       <div class="part2">
