--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     <section class="navigation">
         <div class="nav-container">
           <div class="brand">
-            <a href="#!">Logo</a>
+            <a class="nav-logo" href="#!"><img src="../static/img/NOU-Pro.png" alt=""></a>
           </div>
           <nav>
             <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
@@ -55,7 +55,7 @@
             class="relative flex items-end h-32 bg-gray-900 lg:col-span-5 lg:h-full xl:col-span-6"
           >
             <img
-              src="https://images.unsplash.com/photo-1617195737496-bc30194e3a19"
+              src="../static/img/st05.png"
               alt="Pattern"
               class="absolute inset-0 object-cover w-full h-full opacity-80"
             />
@@ -77,7 +77,7 @@
               </a>
       
               <h1 class="mt-6 text-2xl font-bold text-white sm:text-3xl md:text-4xl">
-                Welcome to Squid 🦑
+                Admission Checker
               </h1>
       
               <p class="mt-4 leading-relaxed text-white/90">
@@ -128,10 +128,11 @@
                   <p id="alertmsg"></p>
                 </div>
                 <br>
-                <div class="col-span-6 sm:col-span-3">
+                <div  id="firstnames" class="col-span-6 sm:col-span-3">
                   <label
                     for="FirstName"
-                    class="block text-sm font-medium text-gray-700"
+                    class="block text-sm font-medium text-gray-700 firstnames"
+                   
                   >
                     First Name
                   </label>
@@ -140,7 +141,7 @@
                     type="text"
                     id="firstname"
                     name="first_name"
-                    class="w-full mt-1 text-sm text-gray-700 bg-white border-gray-200 rounded-md shadow-sm"
+                    class="w-full mt-1 text-sm text-gray-700 bg-white border-gray-200 rounded-md shadow-sm firstnames"
                   />
                 </div>
       
@@ -189,7 +190,7 @@
                   />
                 </div>
       
-                <div class="col-span-6 sm:col-span-3">
+                <!-- <div class="col-span-6 sm:col-span-3">
                   <label
                     for="PasswordConfirmation"
                     class="block text-sm font-medium text-gray-700"
@@ -203,9 +204,9 @@
                     name="password_confirmation"
                     class="w-full mt-1 text-sm text-gray-700 bg-white border-gray-200 rounded-md shadow-sm"
                   />
-                </div>
+                </div> -->
       
-                <div class="col-span-6">
+                <!-- <div class="col-span-6">
                   <label for="MarketingAccept" class="flex gap-4">
                     <input
                       type="checkbox"
@@ -219,7 +220,7 @@
                       company announcements.
                     </span>
                   </label>
-                </div>
+                </div> -->
       
                 <div class="col-span-6">
                   <p class="text-sm text-gray-500">
@@ -232,16 +233,16 @@
                   </p>
                 </div>
       
-                <div class="col-span-6 sm:flex sm:items-center sm:gap-4">
+                <div class="col-span-6 sm:flex sm:items-center sm:gap-4 btns">
                   <a onclick="Signup()"
-                    class="inline-block px-12 py-3 text-sm font-medium text-white transition bg-blue-600 border border-blue-600 rounded-md shrink-0 hover:bg-transparent hover:text-blue-600 focus:outline-none focus:ring active:text-blue-500"
+                    class="inline-block px-12 py-3 text-sm font-medium text-white transition bg-blue-600 border border-blue-600 rounded-md hover:bg-transparent hover:text-blue-600 focus:outline-none focus:ring active:text-blue-500  btns" id="btn"
                   >
-                    Create an account
+                    Create
                 </a>
       
                   <p class="mt-4 text-sm text-gray-500 sm:mt-0">
                     Already have an account?
-                    <a href="./login.html" class="text-gray-700 underline">Log in</a>.
+                    <a href="./signin" class="text-gray-700 underline">Log in</a>.
                   </p>
                 </div>
               </form>
@@ -258,6 +259,7 @@
 
 
 
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 
 
