--- a/templates/signup.html
+++ b/templates/signup.html
@@ -41,7 +41,7 @@
         </div>
       </section>
       <form action="#" class="grid grid-cols-6 gap-6 mt-8">
-        <div class="col-span-6 sm:col-span-3">
+        <div id="firstname" class="col-span-6 sm:col-span-3">
           <label
             for="FirstName"
             class="block text-sm font-medium text-gray-700"
@@ -118,7 +118,7 @@
           />
         </div>
 
-        <div class="col-span-6">
+        <!-- <div class="col-span-6">
           <label for="MarketingAccept" class="flex gap-4">
             <input
               type="checkbox"
@@ -132,7 +132,7 @@
               company announcements.
             </span>
           </label>
-        </div>
+        </div> -->
 
         <div class="col-span-6">
           <p class="text-sm text-gray-500">
@@ -154,7 +154,7 @@
 
           <p class="mt-4 text-sm text-gray-500 sm:mt-0">
             Already have an account?
-            <a href="./login.html" class="text-gray-700 underline">Log in</a>.
+            <a href="./signin.html" class="text-gray-700 underline">Log in</a>.
           </p>
         </div>
       </form>
