--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -70,16 +70,50 @@ button{
 
   height: 25rem;
   background-color: white;
-  margin-top: 10%;
-  width: 30%;
-  margin-left: 60%;
+  margin-top: -10%;
+  width: 50%;
+  margin-left: 30%;
   text-align: center;
 }
 h3{
   margin-bottom:8%;
+  padding-top: 4%;
+  font-size: 25px;
 }
-
+.nav-logo{
+  height: 4rem;
+  width: 20%;
+  border-radius: 50px;
+}
+.nav-logo img{
+  width: 200%;
+  height:4rem;
+  border-radius: 50px;
+  margin-top: 2%;
+}
+span{
+  font-size: 20px;
+  color: red;
+}
 @media screen and (max-height: 450px) {
   .sidebar {padding-top: 15px;}
   .sidebar a {font-size: 18px;}
+}
+@media screen and (max-width: 450px){
+.sidebar{
+  width: 100px;
+
+}
+.sidebar a{
+  font-size: 20px;
+}
+.nav-logo
+{
+  width: 30px;
+}
+.part2{
+  margin-top: -60%;
+  width: 70%;
+  margin-left: 28%;
+}
 }
