--- a/templates/signin.html
+++ b/templates/signin.html
@@ -14,15 +14,12 @@
     <title>Homepage</title>
 </head>
 <body>
-  <div style="display: none;" id="notification" class="noti">
-    <button class="delete"></button>
-    <p id="alertmsg"></p>
-  </div>
+ 
   <br>
     <section class="navigation">
         <div class="nav-container">
           <div class="brand">
-            <a href="#!">Logo</a>
+            <a class="nav-logo" href="./index.html"><img src="../static/img/NOU-Pro.png" alt=""></a>
           </div>
           <nav>
             <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
@@ -58,7 +55,7 @@
             class="relative flex items-end h-32 bg-gray-900 lg:col-span-5 lg:h-full xl:col-span-6"
           >
             <img
-              src="https://images.unsplash.com/photo-1617195737496-bc30194e3a19"
+              src="../static/img/st05.png"
               alt="Pattern"
               class="absolute inset-0 object-cover w-full h-full opacity-80"
             />
@@ -80,7 +77,7 @@
               </a>
       
               <h1 class="mt-6 text-2xl font-bold text-white sm:text-3xl md:text-4xl">
-                Welcome to Squid 🦑
+                Admission Checker
               </h1>
       
               <p class="mt-4 leading-relaxed text-white/90">
@@ -127,7 +124,10 @@
       
               <form action="#" class="grid grid-cols-6 gap-6 mt-8">
                
-      
+                <div style="display: none;" id="notification" class="noti">
+                  <button class="delete"></button>
+                  <p id="alertmsg"></p>
+                </div>
                
       
                 <div class="col-span-6">
@@ -187,7 +187,7 @@
       
                   <p class="mt-4 text-sm text-gray-500 sm:mt-0">
                     Don't have an account?
-                    <a href="./index.html" class="text-gray-700 underline">Create Account</a>.
+                    <a href="./" class="text-gray-700 underline">Create Account</a>.
                   </p>
                 </div>
               </form>
@@ -203,7 +203,7 @@
 
 
 
-
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 
 
