--- a/templates/signin.html
+++ b/templates/signin.html
@@ -14,35 +14,7 @@
     <title>Homepage</title>
 </head>
 <body>
- 
-  <br>
-    <section class="navigation">
-        <div class="nav-container">
-          <div class="brand">
-            <a class="nav-logo" href="./index.html"><img src="../static/img/NOU-Pro.png" alt=""></a>
-          </div>
-          <nav>
-            <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
-            <ul class="nav-list">
-              <li>
-                <a href="#!">Home</a>
-              </li>
-              <li>
-                <a href="#!">Service</a>
-              </li>
-              
-              <li>
-                <a href="#!">About</a>
-              </li>
-              
-              <li>
-                <a href="#!">About Developer</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-      </section>
-         
+  {% include "nav.html" %}
 
 
 
@@ -203,35 +175,6 @@
 
 
 
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-
-
-
-      <script>
-        (function($) { // Begin jQuery
-       $(function() { // DOM ready
-         // If a link has a dropdown, add sub menu toggle.
-         $('nav ul li a:not(:only-child)').click(function(e) {
-           $(this).siblings('.nav-dropdown').toggle();
-           // Close one dropdown when selecting another
-           $('.nav-dropdown').not($(this).siblings()).hide();
-           e.stopPropagation();
-         });
-         // Clicking away from dropdown will remove the dropdown class
-         $('html').click(function() {
-           $('.nav-dropdown').hide();
-         });
-         // Toggle open and close nav styles on click
-         $('#nav-toggle').click(function() {
-           $('nav ul').slideToggle();
-         });
-         // Hamburger to X toggle
-         $('#nav-toggle').on('click', function() {
-           this.classList.toggle('active');
-         });
-       }); // end DOM ready
-     })(jQuery); // end jQuery
-     </script>
      
    
      <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
