--- a/templates/signin.html
+++ b/templates/signin.html
@@ -104,12 +104,12 @@
       
                 <div class="col-span-6">
                   <label for="Email" class="block text-sm font-medium text-gray-700">
-                    Email
+                    Exam ID
                   </label>
       
                   <input
-                    type="email"
-                    id="email"
+                    type="text"
+                    id="exam_no"
                     name="email"
                     class="w-full mt-1 text-sm text-gray-700 bg-white border-gray-200 rounded-md shadow-sm"
                   />
